<resources>
    <string name="app_name">LearnWords</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titleText">"Welcome to LearnWords</string>
    <string name="btnLearnText">Learn Words</string>
    <string name="btnAddText">Add Words</string>
    <string name="itemENG_RUSText">English to Russian</string>
    <string name="itemRUS_ENGText">Russian to English</string>
    <string name="itemTRANSCRIPText">Transcription to words</string>
    <string name="itemRandomText">Random mode</string>
    <string name="itemLearnText">Add words to learn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_rules">Something about rules</string>
    <string name="how_use_text">How use it?</string>
    <string name="about_us">About app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>