<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddWords">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TODO: Update blank fragment layout -->

            <TextView
                android:id="@+id/itemRUS_ENG"
                style="@style/LearnWordsStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/itemRUS_ENGText"
                app:layout_constraintBottom_toTopOf="@+id/itemRANDOM"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/itemENG_RUS"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/itemRANDOM"
                style="@style/LearnWordsStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_purple"
                android:text="@string/itemRandomText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/itemTRANSCRIP"
                app:layout_constraintTop_toBottomOf="@+id/itemRUS_ENG" />

            <TextView
                android:id="@+id/itemTRANSCRIP"
                style="@style/LearnWordsStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/itemTRANSCRIPText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/itemRANDOM"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemENG_RUS" />

            <TextView
                android:id="@+id/itemENG_RUS"
                style="@style/LearnWordsStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/itemENG_RUSText"
                app:layout_constraintBottom_toTopOf="@+id/itemTRANSCRIP"
                app:layout_constraintEnd_toStartOf="@+id/itemRUS_ENG"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>